Retomando o projeto e criando o botao de download

--- a/public/index.html
+++ b/public/index.html
@@ -7,14 +7,14 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Editor de Imagens simples feito com React JS"
     />
-    
+
     <title>React App</title>
   </head>
   <body>
     <noscript>Habilite o Javascript</noscript>
     <div id="root"></div>
-  
+
   </body>
 </html>
